@@ -2,29 +2,21 @@ package pl.logic.site.controller;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.times;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-import jakarta.servlet.http.HttpServletRequest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.security.test.context.support.WithAnonymousUser;
-import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import pl.logic.site.facade.ObjectFacade;
 import pl.logic.site.model.dao.ExaminationDAO;
 import pl.logic.site.model.enums.LogType;
@@ -32,11 +24,8 @@ import pl.logic.site.model.exception.DeleteError;
 import pl.logic.site.model.exception.EntityNotFound;
 import pl.logic.site.model.exception.SaveError;
 import pl.logic.site.model.mysql.Examination;
-import pl.logic.site.model.response.Response;
 import pl.logic.site.service.LoggingService;
-import pl.logic.site.utils.Consts;
 
-import java.util.Arrays;
 import java.util.List;
 
 @ExtendWith(SpringExtension.class)
@@ -53,110 +42,169 @@ public class ExaminationControllerTest {
     @MockBean
     private LoggingService loggingService;
 
-    private ExaminationDAO examinationDAO;
+
     private Examination examination;
 
     @BeforeEach
     public void setup() {
-        examination = new Examination(1,2,"blood type","AB");
-
-        examinationDAO = new ExaminationDAO(examination);
+        examination = new Examination(1, 2, "blood type", "AB");
     }
 
-    @WithMockUser(username = "user", roles = "USER")
     @Test
     public void testCreateExaminationSuccess() throws Exception {
         when(objectFacade.createObject(any(ExaminationDAO.class))).thenReturn(examination);
 
         mockMvc.perform(post("/examinationController/examination")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{  \"examination\": {\n" +
-                                "    \"id\": 0,\n" +
-                                "    \"idPatient\": 2,\n" +
-                                "    \"examination\": \"blood type\",\n" +
-                                "    \"examinationValue\": \"AB\"\n" +
-                                "  }}"))
-                .andExpect(status().isCreated());
+                        .content("""
+                                {  "examination": {
+                                    "id": 0,
+                                    "idPatient": 2,
+                                    "examination": "blood type",
+                                    "examinationValue": "AB"
+                                  }}""")).andExpect(status().isCreated())
+                .andExpect(jsonPath("$.containedObject.id").value("1"))
+                .andExpect(jsonPath("$.containedObject.idPatient").value(examination.getIdPatient()))
+                .andExpect(jsonPath("$.containedObject.examination").value(examination.getExamination()))
+                .andExpect(jsonPath("$.containedObject.examinationValue").value(examination.getExaminationValue()));
+        verify(objectFacade, times(1)).createObject(any(ExaminationDAO.class));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
+
     }
 
-    @WithAnonymousUser
     @Test
     public void testCreateExaminationSaveError() throws Exception {
         doThrow(new SaveError("Error saving entity")).when(objectFacade).createObject(any(ExaminationDAO.class));
 
         mockMvc.perform(post("/examinationController/examination")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{  \"examination\": {\n" +
-                                "    \"id\": 0,\n" +
-                                "    \"idPatient\": 2,\n" +
-                                "    \"examination\": \"blood type\",\n" +
-                                "    \"examinationValue\": \"AB\"\n" +
-                                "  }}"))
+                        .content("""
+                                {  "examination": {
+                                    "id": 0,
+                                    "idPatient": 2,
+                                    "examination": "blood type",
+                                    "examinationValue": "AB"
+                                  }}"""))
                 .andExpect(status().is(453));
+        verify(objectFacade, times(1)).createObject(any(ExaminationDAO.class));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
+
+
     }
 
-    @WithAnonymousUser
     @Test
-    public void testGetAllExaminationsSuccess() throws Exception {
-        List<Examination> examinations = Arrays.asList(examination);
+    public void testGetExaminationsForPatientSuccess() throws Exception {
+        List<Examination> examinations = List.of(examination);
         when(objectFacade.getObjects(any(ExaminationDAO.class), eq(1))).thenReturn(examinations);
 
         mockMvc.perform(get("/examinationController/examinations/1")
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.containedObject[0].id").value("1"))
+                .andExpect(jsonPath("$.containedObject[0].idPatient").value(examination.getIdPatient()))
+                .andExpect(jsonPath("$.containedObject[0].examination").value(examination.getExamination()))
+                .andExpect(jsonPath("$.containedObject[0].examinationValue").value(examination.getExaminationValue()));
+        verify(objectFacade, times(1)).getObjects(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, never()).createLog(anyString(), any(), any(LogType.class), any());
+
     }
 
-    @WithAnonymousUser
     @Test
-    public void testGetAllExaminationsNotFound() throws Exception {
+    public void testGetExaminationsForPatientNotFound() throws Exception {
         doThrow(new EntityNotFound("Not found")).when(objectFacade).getObjects(any(ExaminationDAO.class), eq(1));
 
         mockMvc.perform(get("/examinationController/examinations/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
+        verify(objectFacade, times(1)).getObjects(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
+
     }
 
-    @WithAnonymousUser
+    @Test
+    public void testGetExaminationSuccess() throws Exception {
+        when(objectFacade.getObject(any(ExaminationDAO.class), eq(1))).thenReturn(examination);
+
+        mockMvc.perform(get("/examinationController/examination/1")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.containedObject.id").value("1"))
+                .andExpect(jsonPath("$.containedObject.idPatient").value(examination.getIdPatient()))
+                .andExpect(jsonPath("$.containedObject.examination").value(examination.getExamination()))
+                .andExpect(jsonPath("$.containedObject.examinationValue").value(examination.getExaminationValue()));
+
+        verify(objectFacade, times(1)).getObject(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, never()).createLog(anyString(), any(), any(LogType.class), any());
+
+    }
+
+    @Test
+    public void testGetExaminationNotFound() throws Exception {
+        doThrow(new EntityNotFound("Not found")).when(objectFacade).getObject(any(ExaminationDAO.class), eq(1));
+
+        mockMvc.perform(get("/examinationController/examination/1")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNotFound());
+        verify(objectFacade, times(1)).getObject(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
+
+    }
+
+
     @Test
     public void testUpdateExaminationSuccess() throws Exception {
         when(objectFacade.updateObject(any(ExaminationDAO.class), eq(1))).thenReturn(examination);
 
         mockMvc.perform(put("/examinationController/examinations/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{  \"examination\": {\n" +
-                                "    \"id\": 1,\n" +
-                                "    \"idPatient\": 3,\n" +
-                                "    \"examination\": \"blood type\",\n" +
-                                "    \"examinationValue\": \"AB\"\n" +
-                                "  }}"))
-                .andExpect(status().is(209));
+                        .content("""
+                                {  "examination": {
+                                    "id": 1,
+                                    "idPatient": 2,
+                                    "examination": "blood type",
+                                    "examinationValue": "AB"
+                                  }}"""))
+                .andExpect(jsonPath("$.containedObject.id").value("1"))
+                .andExpect(jsonPath("$.containedObject.idPatient").value(examination.getIdPatient()))
+                .andExpect(jsonPath("$.containedObject.examination").value(examination.getExamination()))
+                .andExpect(jsonPath("$.containedObject.examinationValue").value(examination.getExaminationValue()));
+
+        verify(objectFacade, times(1)).updateObject(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
     }
 
-    @WithAnonymousUser
     @Test
     public void testUpdateExaminationNotFound() throws Exception {
         doThrow(new EntityNotFound("Not found")).when(objectFacade).updateObject(any(ExaminationDAO.class), eq(1));
 
         mockMvc.perform(put("/examinationController/examinations/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{  \"examination\": {\n" +
-                                "    \"id\": 1,\n" +
-                                "    \"idPatient\": 3,\n" +
-                                "    \"examination\": \"blood type\",\n" +
-                                "    \"examinationValue\": \"AB\"\n" +
-                                "  }}"))
+                        .content("""
+                                {  "examination": {
+                                    "id": 1,
+                                    "idPatient": 3,
+                                    "examination": "blood type",
+                                    "examinationValue": "AB"
+                                  }}"""))
                 .andExpect(status().isNotFound());
+        verify(objectFacade, times(1)).updateObject(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
+
     }
 
-    @WithAnonymousUser
+
     @Test
     public void testDeleteExaminationSuccess() throws Exception {
+
         mockMvc.perform(delete("/examinationController/examinations/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().is(210));
+
+        verify(objectFacade, times(1)).deleteObject(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
+
     }
 
-    @WithAnonymousUser
     @Test
     public void testDeleteExaminationNotFound() throws Exception {
         doThrow(new EntityNotFound("Not found")).when(objectFacade).deleteObject(any(ExaminationDAO.class), eq(1));
@@ -164,15 +212,19 @@ public class ExaminationControllerTest {
         mockMvc.perform(delete("/examinationController/examinations/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
+        verify(objectFacade, times(1)).deleteObject(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
+
     }
 
     @Test
-    @WithAnonymousUser
     public void testDeleteExaminationDeleteError() throws Exception {
         doThrow(new DeleteError("Error deleting entity")).when(objectFacade).deleteObject(any(ExaminationDAO.class), eq(1));
 
         mockMvc.perform(delete("/examinationController/examinations/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().is(455));
+        verify(objectFacade, times(1)).deleteObject(any(ExaminationDAO.class), eq(1));
+        verify(loggingService, times(1)).createLog(anyString(), any(), any(LogType.class), any());
     }
 }
